--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,9 +26,15 @@ jobs:
       - name: Build
         run: npm run build
 
+      - name: Archive build output
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+        run: |
+          rm -f extension-build.zip
+          zip -r extension-build.zip dist
+
       - name: Upload build artifact
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         uses: actions/upload-artifact@v4
         with:
           name: extension-build
-          path: dist
+          path: extension-build.zip
