--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,12 +29,15 @@ jobs:
       - name: Archive build output
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         run: |
-          rm -f extension-build.zip
-          zip -r extension-build.zip dist
+          SHORT_SHA="${GITHUB_SHA::7}"
+          ARCHIVE_NAME="briefly-chrome-extension-${SHORT_SHA}.zip"
+          rm -f "$ARCHIVE_NAME"
+          zip -r "$ARCHIVE_NAME" dist
+          echo "ARCHIVE_NAME=$ARCHIVE_NAME" >> "$GITHUB_ENV"
 
       - name: Upload build artifact
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         uses: actions/upload-artifact@v4
         with:
-          name: extension-build
-          path: extension-build.zip
+          name: ${{ env.ARCHIVE_NAME }}
+          path: ${{ env.ARCHIVE_NAME }}
