--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,9 @@ jobs:
           node-version: 20
           cache: npm
 
+      - name: Get short commit SHA
+        run: echo "SHORT_SHA=${GITHUB_SHA::7}" >> $GITHUB_ENV
+
       - name: Install dependencies
         run: npm ci
 
@@ -30,5 +33,5 @@ jobs:
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         uses: actions/upload-artifact@v4
         with:
-          name: briefly-chrome-extension-${{ github.sha }}
+          name: briefly-chrome-extension-${{ env.SHORT_SHA }}
           path: dist
